fixed hover problem on mobile #28

--- a/css/main.scss
+++ b/css/main.scss
@@ -199,6 +199,10 @@ hr+br+h1 {
       margin-left: 36px;
       padding-left: 0;
 
+      &:hover {
+        background: transparent !important;
+      }
+
       &:last-child {
         margin-bottom: 0;
       }
